# barcode-scanner

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
